<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_iv_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="60dp"
        android:contentDescription="@string/logo"
        android:scaleType="centerInside"
        android:src="@drawable/icon_logo" />

    <EditText
        android:id="@+id/login_et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/username"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:id="@+id/login_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/password"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:background="@drawable/button_active"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/login_tv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:visibility="gone"
        android:text=""
        android:textColor="@android:color/holo_red_dark"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_prompt" />

        <Button
            android:id="@+id/login_btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@android:color/transparent"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="0dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="normal" />
    </LinearLayout>
</LinearLayout>