<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/home_tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18sp"
        android:text="@string/welcome"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/home_iv_backarrow"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/backward"
            android:src="@drawable/ic_baseline_arrow_backward_24" />

        <ViewFlipper
            android:id="@+id/home_vf_carousel"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_weight="2" />

        <ImageView
            android:id="@+id/home_iv_forwardarrow"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/forward"
            android:src="@drawable/ic_baseline_arrow_forward_24" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12sp"
        android:text="@string/description_title"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="@android:color/black" />
</LinearLayout>